# Nucleo_F4xx_PlantWelfare

./: Cargo.toml  README.md  openocd.cfg  rust-toolchain.toml
src/: button.rs  led.rs  lib.rs  main.rs  serial_interface.rs  systemconfig.rs  watering_logic.rs
