[package]
authors = ["JohnnnyJohnnny"]
name = "Nucleo_F4xx_PlantWelfare"
version = "0.0.0"
edition = "2021"
description = "small project to transform my living room into a pool"
repository = "https://github.com/JohnnnyJohnnny/Nucleo_F4xx_PlantWelfare"
readme = "README.md"
license = "0BSD"
keywords = [
    "arm",
    "cortex-m",
    "stm32f401",
    "nucleo",
]
categories = [
    "embedded",
    "no-std",
]

[dependencies]
ufmt-write = "0.1.0"
ufmt = { version = "0.1.0", optional = true }
cortex-m = "0.6.2"
riscv = { version = "0.6.0", optional = true }
cortex-m-rt = "0.6.12"
panic-halt = { version = "0.2.0", optional = true }
embedded-hal = "0.2"
stm32f4xx-hal = { version = "0.10.0", features = ["rt", "stm32f401"] }
rtcc = { version = "0.2.1"}
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
arrayvec = { version = "0.7.1", default-features = false }
alloc-cortex-m = "0.4.1"
ascii = { version = "0.7.1", features = ["no_std"] }
chrono ={ version = "0.4.19", default-features = false}

[dev-dependencies]
nb = "0.1"
cortex-m-rtic = "0.5"
hd44780-driver = "0.3.0"
tpa2016d2 = "0.2.0"
segment-display = "0.1"
embedded-graphics = { version = "0.6" }
epd-waveshare = { version = "0.4", features = ["graphics"] }


[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
